servers' private and public keys derived from cert && user asymmetric key generation