@@ -61,6 +61,9 @@
         <configuration>
           <source>${version.java}</source>
           <target>${version.java}</target>
+          <compilerArgs>
+            <arg>--add-exports</arg><arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
+          </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
